Fix font size issue on mobile devices

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -77,4 +77,8 @@
   .FeaturesContainer{
     padding-top: 0!important;
   }
+
+  .navContainer{
+    font-size: 1rem !important;
+  }
 }
